public/css/index.css
body {
    background-image: url('/img/rust-background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    position: relative;
    height: 100vh;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
}

.header {
    overflow: hidden;
    padding: 10px 10px;
}

.header a {
    float: left;
    color: #ddd;
    text-align: center;
    padding: 12px;
    text-decoration: none;
    font-size: 18px;
    line-height: 25px;
    border-radius: 4px;
}

.header a.active {
    color: white;
}

.header-center {
    float: none;
    position: -webkit-sticky;
    position: sticky;
    position: absolute;
    top: 0%;
    left: 40%;
}

a {
    position: relative;
    color: #74c0ff;
    text-decoration: none;
}

a:hover {
    color: white;
    cursor: pointer;
}

a::before {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #74c0ff;
    transform: scaleX(0);
    transition: transform 0.3s ease;
}

a:hover::before {
    transform: scaleX(1);
}

.main-section {
    display: flex;
    position: relative;
    top: 47%;
}

.logo {
    float: left;
    position: relative;
    height: auto;
    width: 300px;
    bottom: 75%;
    left: 33.5%;
}

.arctic-h1 {
    float: left;
    position: relative;
    color: white;
    left: 20%;
    font-size: 2em;
}

.rust-h1 {
    float: left;
    position: relative;
    color: #74c0ff;
    left: 20%;
    font-size: 2em;
}

* {
    box-sizing: border-box;
}

.quicklinks {
    overflow: hidden;
    display: flex;
    flex-direction: row;
    margin-left: -0.5em;
    margin-bottom: -0.5em;
}

.button1 {
    display: inline-block;
    background-color: inherit;
    padding: 0.1em 1em;
    box-sizing: border-box;
    border: 0.05em solid #74c0ff;
    color: #74c0ff;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    font-size: 1em;
    cursor: pointer;
    border-radius: 2em;
    transition: all 0.15s;
}

.button2 {
    display: inline-block;
    background-color: inherit;
    padding: 0.1em 2.2em;
    box-sizing: border-box;
    border: 0.05em solid #74c0ff;
    color: #74c0ff;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    font-size: 1em;
    cursor: pointer;
    border-radius: 2em;
    transition: all 0.15s;
}

.button1:hover {
    color: white;
    background-color: #74c0ff;
}

.button2:hover {
    color: white;
    background-color: #74c0ff;
}

.discordbutton {
    float: left;
    top: 62%;
    left: 40%;
    position: absolute;
}

.steambutton {
    float: left;
    top: 62%;
    left: 48%;
    position: absolute;
}

.server-container {
    display: block;
    position: relative;
    background: #0b1a23;
    background-position: center;
    top: 70%;
    height: 60vh;
    width: 100%;
    right: 0;
    left: 0;
    bottom: 0;
}

.servers {
    background-color: inherit;
    display: block;
    text-align: center;
    color: white;
    font-size: 1em;
    padding: 10px;
}

.servers-title {
    position: absolute;
    left: 42.4%;
    top: 0px;
    color:#74c0ff;
    font-size: 1.2em;
}

.servers-ls {
    position: absolute;
    left: 44.8%;
    top: 55px;
    color: white;
    font-size: 1.20em;
}

.server1 {
    position: absolute;
    border: 1px solid;
    border-color: #74c0ff;
    border-radius: 25px;
    color: white;
    top: 170px;
    left: 38.5%;
    height: 300px;
    width: 300px;
    font-size: 1em;
}

.server1 {
    color:#74c0ff;
}

.server1-h1 {
    font-size: 1em;
}

.server1-status {
    position: absolute;
    color: green;
    left: 24%;
    top: 70px;
    font-size: 1em;
}

.server1-players {
    position: absolute;
    color: white;
    left: 43%;
    top: 70px;
    font-size: 1em;
}

.server1-ip {
    position: absolute;
    color: white;
    left: 15%;
    top: 95px;
    font-size: 1em;
}

.server1-map {
    position: absolute;
    color: white;
    left: 20%;
    top: 120px;
    font-size: 1em;
}

.server1-ms {
    position: absolute;
    color: white;
    left: 33%;
    top: 145px;
    font-size: 1em;
}

.server1-wp {
    position: absolute;
    color: white;
    left: 6%;
    top: 167px;
    font-size: 1em;
}

.server1-rating {
    position: absolute;
    color: white;
    left: 40%;
    top: 190px;
    font-size: 1em;
}

.s1-btn{
    display: inline-block;
    background-color: inherit;
    padding: 0.1em 1em;
    box-sizing: border-box;
    border: 0.05em solid #74c0ff;
    color: #74c0ff;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    font-size: 1em;
    cursor: pointer;
    border-radius: 2em;
    transition: all 0.15s;
}

.server1-btn {
    position: absolute;
    top: 250px;
    left: 100px;
}

.s1-btn:hover {
    color: white;
    background-color: #74c0ff;
}

.footer {
    display: flex;
    position: relative;
    color: #ddd;
    top: 65%;
}

.copyright {
    position: absolute;
    left: 1%;
    font-size: 0.8em;
}

.policy-btn {
    position: absolute;
    padding-top: 10px;
    left: 94%;
    color: #ddd;
}

.button3 {
    border: none;
    outline: none;
    background-color: inherit;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    color: #ddd;
}

/* Responsive */

@media only screen and (max-width: 768px) {
    body {
        background-image: url('/img/rust-background.png');
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        position: relative;
        height: 100vh;
        width: 1vw;
    }

    .header a {
        display: flex;
        flex-direction: row;
        font-size: 16px;
    }
    .header-center {
        top: 0px;
        left: 2700%;
        display: flex;
        flex-direction: row;
    }

    a::before {
        position: absolute;
        top: 40px;
    }

    .logo {
        position: relative;
        display: flex;
        left: 40%;
        top: 115px;
        width: 50vw;
        height: auto;
    }

    .arctic-h1 {
        float: left;
        position: relative;
        display: flex;
        left: 2300%;
        top: 100%;
        color: white;
        font-size: 3.6vw;
    }
    
    .rust-h1 {
        float: left;
        position: relative;
        display: block;
        left: 5000%;
        top: 74px;
        color: #74c0ff;
        font-size: 3.6vw;
    }

    .button1 {
        display: inline-block;
        background-color: inherit;
        padding: 0.1em 1em;
        box-sizing: border-box;
        border: 0.05em solid #74c0ff;
        color: #74c0ff;
        text-align: center;
        text-decoration: none;
        font-weight: bold;
        font-size: 0.5em;
        cursor: pointer;
        border-radius: 2em;
        transition: all 0.15s;
    }

    .button2 {
        display: inline-block;
        background-color: inherit;
        padding: 0.1em 2.2em;
        box-sizing: border-box;
        border: 0.05em solid #74c0ff;
        color: #74c0ff;
        text-align: center;
        text-decoration: none;
        font-weight: bold;
        font-size: 0.5em;
        cursor: pointer;
        border-radius: 2em;
        transition: all 0.15s;
    }

    .discordbutton {
        float: none;
        top: 65%;
        left: 80%;
        position: absolute;
    }
    
    .steambutton {
        float: none;
        top: 65%;
        left: 48%;
        position: absolute;
    }

    .server-container {
        display: flex;
        position: absolute;
        background: #0b1a23;
        top: 100%;
        height: 70vh;
        width: 97.1vw;
        right: 0;
        left: 0;
        bottom: 0;
    }

    .servers {
        flex-direction: column;
    }

    .servers-title {
        position: absolute;
        left: 35%;
        top: 0px;
        color:#74c0ff;
        font-size: 1em;
    }

    .servers-ls {
        position: absolute;
        left: 41%;
        top: 7%;
        color: white;
        font-size: 1em;
    }

    .server1 {
        display: flex;
        flex-direction: column;
        position: absolute;
        border: 1px solid;
        border-color: #74c0ff;
        border-radius: 25px;
        color: #74c0ff;
        top: 120px;
        left: 100px;
        height: 400px;
        width: 300px;
        font-size: 1em;
    }

    .server1-status {
        position: absolute;
        color: green;
        left: 25%;
        top: 18%;
        font-size: 1em;
    }

    .server1-players {
        position: absolute;
        color: white;
        left: 43%;
        top: 18%;
        font-size: 1em;
    }

    .server1-ip {
        position: absolute;
        color: white;
        left: 15%;
        top: 25%;
        font-size: 1em;
    }

    .server1-ms {
        position: absolute;
        color: white;
        left: 100px;
        top: 145px;
        font-size: 1em;
    }

    .server1-wp {
        position: absolute;
        color: white;
        left: 12px;
        top: 170px;
        font-size: 1em;
    }

    .server1-btn {
        position: absolute;
        top: 340px;
        left: 100px;
    }

    .footer {
        size: 0.5em;
    }
}

